--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
     "128": "icon128.png"
   },
   "name": "Image Swapper",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Replace images on any website with your own hosted assets or CDN mirror. Great for visual mods, theming, or development overrides.",
-  "permissions": ["storage", "scripting", "activeTab"],
+  "permissions": ["storage", "activeTab"],
   "host_permissions": ["<all_urls>"],
   "action": {
     "default_popup": "popup.html",
